# ai-ppt-agent

./: .gitattributes  .gitignore  .nojekyll  404.html  AGENTS.md  PRODUCT.md  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.txt  conftest.py  index.html  index.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  projects.html  pyproject.toml  workflow.html  workflow.txt
.openai/: hosting.json
404/: index.html
_next/static/NNp61SxGo7qww0SPdbnoQ/: _buildManifest.js
_next/static/chunks/: 01h-ztezh0b9h.css  0km756aia4r14.js  0kp76j-hdj0ny.js  0mtqjm3uol_yb.js  0xt1q1-bx-iey.js  0y9tbdk3_zdf_.css  120oh_bk1p7m9.css  14h7w8mihjsnz.js  1ba49776sxr3g.css  1hbgptr9z4n0s.js  (+17 more)
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
_not-found/__next._not-found/: __PAGE__.txt
apps/web/: PRODUCT.md  next-env.d.ts  next.config.mjs  package.json  tsconfig.json
docs/: EXPERT_MODE_IMPROVEMENT_CHECKLIST.md  FRONTEND_VISUAL_PROMPTS.md  OPEN_SOURCE_PPT_LAYOUT_RESEARCH.md  PROJECT_STATE.md
live/: index.html
projects/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.projects.txt  index.html  index.txt
projects/__next.projects/: __PAGE__.txt
scripts/: export-site.mjs  public-runtime.ps1  start-local.ps1
tests/: test_contract_examples.py  test_foundation_slice.py
workflow/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.workflow.txt  index.html  index.txt
workflow/__next.workflow/: __PAGE__.txt
(+87 files in other folders)
