[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "ai-ppt-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jsonschema>=4.26,<5",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pypdf>=6.10,<7",
  "uvicorn>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "httpx2==2.4.0",
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "packages/contracts/python", "packages/skills/python"]
testpaths = ["apps/api/tests", "tests"]
addopts = "--strict-markers"

[tool.hatch.build.targets.wheel]
packages = [
  "apps/api/app",
  "packages/contracts/python/ai_ppt_contracts",
  "packages/skills/python/ai_ppt_skills"
]
